ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_detail_view_first_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ hub errors ──────────────────────────────────────────────────────────────────╮
│● check / fmt · failed — ooloth/hub                                           │
│● check / fmt · failed — ooloth/hub                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
1/2 · Press ↩ to open https://github.com/ooloth/hub/actions/runs/25608685802 · P
