ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_detail_view_last_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│CI ▾ check / fmt · failed (2)                                 ooloth/hub · now│
│CI  │ check / fmt · failed                                    ooloth/hub · now│
│CI  └ check / fmt · failed                                    ooloth/hub · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 3/1 · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] s
