ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_issue_detail_no_body.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ No description issue ─────────────────────────────────────── ooloth/hub · #7 ╮
│                                                                              │
│(no description)                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  [a] approve · [d] dismiss · [↩] open · [Esc] back
