ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_merging_pr.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭───────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────╮
│## Summary                                                             │   checks     (none)                          │
│                                                                       │   status     0 reviews                       │
│Adds a detail screen for PRs.                                          │   comments   2 comments                      │
│                                                                       │   diff       +0 −0 in 0 files                │
│## Why                                                                 │   author     @ooloth                         │
│                                                                       │   updated    1d ago                          │
│Readability from terminal without leaving the TUI.                     │   repo       ooloth/hub                      │
│                                                                       │   branch     feat/pr-detail                  │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
│                                                                       │                                              │
╰───────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────╯
 Squash and merge #102 into main?  [↩] confirm · [Esc] cancel
