ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_changes_requested.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭───────────────────────────────────────────────┬──────────────────────────────╮
│                                               │   checks     (none)          │
│(no description)                               │   status     Changes requeste│
│                                               │   comments   0 comments      │
│                                               │   diff       +0 −0 in 0 files│
│                                               │   author     @ooloth         │
│                                               │   updated    5h ago          │
│                                               │   repo       ooloth/hub      │
╰───────────────────────────────────────────────┴──────────────────────────────╯
  [o] open · [d] diff · [v] review · [m] merge · [i] ask · [Esc] back
